# unistruct

./: LICENSE  README.md  pyproject.toml
src/unistruct/: unistruct.py
