[project]
name = "unistruct"
version = "0.0.1"
authors = [
  { name="Eric Seifert", email="eric@seifert.casa" },
]
description = "Python data structure convenience library."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/seiferteric/unistruct"
"Bug Tracker" = "https://github.com/seiferteric/unistruct/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

